@@ -939,6 +939,17 @@ sub notification_types { return \%RNT; }
 	y_centered        => 0,
 );
 
+my $_markup_loaded;
+sub _markup($)
+{
+	unless ( $_markup_loaded ) {
+		eval "use Prima::Drawable::Markup;";
+		die $@ if $@;
+		$_markup_loaded++;
+	}
+	return Prima::Drawable::Markup::M( ${ $_[0] } );
+}
+
 sub profile_default
 {
 	my $def = $_[ 0]-> SUPER::profile_default;
@@ -970,6 +981,10 @@ sub profile_check_in
 	my $owner = exists $p-> { owner} ? $p-> { owner} : $default-> { owner};
 	$self-> SUPER::profile_check_in( $p, $default);
 	delete $p-> { font} unless defined $orgFont;
+
+	for my $tx ( qw(text hint)) {
+		$p->{$tx} = _markup $p->{$tx} if defined $p->{$tx} && (ref($p->{$tx}) // '') eq 'SCALAR';
+	}
 
 	my $name = defined $p-> {name} ? $p-> {name} : $default-> {name};
 	$p-> {text} = $name
@@ -1174,6 +1189,18 @@ sub popupLight3DColor     { return shift-> popupColorIndex( ci::Light3DColor, @_
 
 sub x_centered       {($#_)?$_[0]-> set_centered(1,0)      :$_[0]-> raise_wo("x_centered"); }
 sub y_centered       {($#_)?$_[0]-> set_centered(0,1)      :$_[0]-> raise_wo("y_centered"); }
+
+sub hint
+{
+	return $_[0]->get_hint unless $#_;
+	$_[0]->set_hint( (( ref($_[1]) // '') eq 'SCALAR') ? _markup $_[1] : $_[1] );
+}
+
+sub text
+{
+	return $_[0]->get_text unless $#_;
+	$_[0]->set_text( (( ref($_[1]) // '') eq 'SCALAR') ? _markup $_[1] : $_[1] );
+}
 
 sub insert
 {
