@@ -27,7 +27,6 @@ object Prima::Window( Prima::Widget)
 	property Bool     selected;
 	property Point    size;
 	property Bool     taskListed;
-	property SV *     text;
 	property Bool     transparent;
 	property int      windowState;
 
@@ -52,6 +51,7 @@ object Prima::Window( Prima::Widget)
 	import   SV *     profile_default ();
 	method   void     set( HV * profile);
 	method   void     set_menu_font( Font font);
+	method   void     set_text( SV * text);
 	c_only   void     update_sys_handle( HV * profile);
 	c_only   Bool     validate_owner( Handle * newOwner, HV * profile);
 #	private
